@@ -1,3 +1,8 @@
+2003-10-12  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/dialogs/new-calendar.c (new_calendar_dialog): set up widgets
+	loaded from the Glade file.
+
 2003-10-10  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/dialogs/new-calendar.[ch]: added new widget, which implements
